--- a/index.html
+++ b/index.html
@@ -10,52 +10,65 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">Fraunces</h1>
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
           <nav class="page-nav">
                   <ul>
-                      <li><a href="index.html">History</a></li>
-                      <li><a href="about.html">Variations</a></li>
-                      <li><a href="contact.html">Full character set</a></li>
-                      
+                      <li><a href="index.html">history</a></li>
+                      <li><a href="characters.html">characters</a></li>
+                      <li><a href="download.html">download</a></li>
                   </ul>
               </nav>
-       <label for="nav-checkbox" class="nav-checkbox-icon">
-           <span></span>
-       </label>
+              <label for="nav-checkbox" class="nav-checkbox-icon">
+                <span></span>
+            </label>
           </header>
           <!-- Hero section -->
           <section class="hero">
-                <h3>Hero section</h3>
-                <h3>vwxyz</h3>
+                <h2>This is</h2>
+                <h3>
+                  <span class="first">Fraunces</span>
+                  <span class="second">Fraunces</span>
+                  <span class="third">Fraunces</span>
+                </h3>
+                <h3>
+                  <span class="first1">Fraunces</span>
+                  <span class="second2">Fraunces</span>
+                  <span class="third3">Fraunces</span>
+                </h3>
           </section>
           <!-- Type history -->
 <section class="page-wrapper">
           <section class="history"> 
-            <h1>History of the font</h1>
-                <p>
-                    Forma DJR revives Forma, the stylish sans serif released in 1968 by the renowned type foundry Nebiolo and created by a team of Italian designers led by the inimitable Aldo Novarese. Publications designer Roger Black has admired the design for years, so he commissioned DJR to revive it for his 2O13 redesign of Hong Kong Tatler. Based on metal type found by Indra Kupferschmid, this interpretation captures the rounded corners, tapered stems, and subtle quirks that were byproducts of the printing process. With super-tight spacing in five optical sizes, this revival attempts to embody the peculiar collision of midcentury modernist precision and the smudgy realities of metal, ink, and paper.                </p>
-                <h1>Supported Languages include:</h1>
-                <p>Afrikaans, Albanian, Alsatian, Basque, Bislama, Breton, Catalan, Chamorro, Croatian, Czech, Danish, Dutch, English, Estonian, Faroese, Finnish, Flemish, Franco-Provençal, French, Frisian, Friulian, Galician, German, Greenlandic, Hungarian, Icelandic, Indonesian, Irish, Italian, Kurdish (Latin), Ladin, Latin, Latvian, Lithuanian, Luxembourgish, Malay, Manx Gaelic, Moldovan, Norwegian (Bokmål, Nynorsk), Occitan, Polish, Portuguese, Rhaeto-Romance, Romanian, Romansh, Sami (Inari, Lule, Northern, Skolt, Southern), Scottish Gaelic, Slovak, Sorbian, Slovenian, Spanish, Swahili, Swedish, Tagalog, Turkish, Uzbek (Latin), Walloon, Welsh.</p>
+            <h1>History</h1>
+                <p>Fraunces is a typeface published in 2020 by Phaedra Charles and Flavia Zimbardi with the help of Ethan Cohen and Andy Clymer at Undercase Type. The challenge of creating a display typeface was given to them by Google Fonts in 2018. It is often referred to as an “Old Style” typeface since the inspiration comes from the late nineteenth and early twentieth centuries, specifically during the Arts and Crafts experimentations. This is when many “wonky” fonts came into play that brought some personality to modernity without making historical authenticity the main focus. Other typefaces such as Cooper Black, Windsor, and Souvenir act as strong influences in the creation of Fraunces along with Golden Type of 1890.</p>
+                <p>Popularity of these funky styles rose with graphic designers in the 1970s such as the “Thank You for Shopping With Us!” statement seen throughout North America. It is friendly yet elegant with that touch of personality. On the other hand, this type of style lost it’s popularity in the 1990’s until it’s revival and modernization in the 21st century. The Fraunces typeface is a modern creation of a historically influenced style with it’s unique qualities.</p> 
           </section>
 
           <section class="variations">
-            <h1>a breakdown of what can be changed on the variable font</h1>
+            <h1>weight</h1>
+            <h1>softness</h1>
+            <h1>wonk</h1>
+            <h1>optical size</h1>
           </section>
 
-          <section class="alphabet">
-            <h1>Full character set</h1>
+          <section id="characters">
+            <div id="text-wrapper">
+              <section class="characters-title">
+            <h1>Full Character Set</h1></section>
             <p>AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
             <p>1234567890</p>
             <p>!@#$%^&*()</p>
-
+            </div>
           </section>
 
           </div>
           </section>
           <!-- Start of the footer -->
           <footer>
-            Footer content goes here
+            <h4>Fraunces</h4>
+            <h5><div>Marissa Nocon • marissa.nocon@gmail.com • 401-865-9737</div>
+            <div>University of Massachusetts Dartmouth • CVPA</div>
+            <div>AXD 254 Web Typography • Professor Lara Henderson</div></h5>
           </footer>
 
 </body>
