got rid of phone number

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <!-- Start of the footer -->
           <footer>
             <h4>Fraunces</h4>
-            <h5><div>Marissa Nocon • marissa.nocon@gmail.com • 401-865-9737</div>
+            <h5><div>Marissa Nocon • marissa.nocon@gmail.com</div>
             <div>University of Massachusetts Dartmouth • CVPA</div>
             <div>AXD 254 Web Typography • Professor Lara Henderson</div></h5>
           </footer>
