--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="navigation.css">
-    <title>Variable Type Specimen</title>
-    
+    <title>Variable Type Specimen</title>  
 </head>
+
 <body>
     <header>
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
@@ -23,10 +23,12 @@
                 <span></span>
             </label>
           </header>
+
           <!-- Hero section -->
           <section class="hero">
             <section class="this-is">
-                <h2>This is...</h2></section>
+                <h2>This is...</h2>
+            </section>
                 <h3>
                   <span class="first">Fraunces</span>
                   <span class="second">Fraunces</span>
@@ -38,26 +40,28 @@
                   <span class="third3">Fraunces</span>
                 </h3>
           </section>
+
           <!-- Type history -->
 <section class="page-wrapper">
           <section class="history">
-            <section class="history-title" 
+            <section class="history-title">
             <h1>History</h1></section>
                 <p>Fraunces is a typeface published in 2020 by Phaedra Charles and Flavia Zimbardi with the help of Ethan Cohen and Andy Clymer at Undercase Type. The challenge of creating a display typeface was given to them by Google Fonts in 2018. It is often referred to as an “Old Style” typeface since the inspiration comes from the late nineteenth and early twentieth centuries, specifically during the Arts and Crafts experimentations. This is when many “wonky” fonts came into play that brought some personality to modernity without making historical authenticity the main focus. Other typefaces such as Cooper Black, Windsor, and Souvenir act as strong influences in the creation of Fraunces along with Golden Type of 1890.</p>
                 <p>Popularity of these funky styles rose with graphic designers in the 1970s such as the “Thank You for Shopping With Us!” statement seen throughout North America. It is friendly yet elegant with that touch of personality. On the other hand, this type of style lost it’s popularity in the 1990’s until it’s revival and modernization in the 21st century. The Fraunces typeface is a modern creation of a historically influenced style with it’s unique qualities.</p> 
           </section>
 
           <section class="variations">
-            <h1>weight</h1>
-            <h1>softness</h1>
-            <h1>wonk</h1>
-            <h1>optical size</h1>
+            <p><span class="weight">weight</span></p>
+            <p><span class="softness">softness</span></p>
+            <p><span class="wonk">wonk</span></p>
+            <p><span class="optical-size">optical size</span></p>
           </section>
 
           <section id="characters">
             <div id="text-wrapper">
               <section class="characters-title">
-            <h1>Full Character Set</h1></section>
+            <h1>Full Character Set</h1>
+              </section>
             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ
               <div>abcdefghijklmnopqrstuvwxyz</div>
               0123456789</p>
@@ -72,6 +76,7 @@
 
           </div>
           </section>
+
           <!-- Start of the footer -->
           <footer>
             <h4>Fraunces</h4>
