--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
           <nav class="page-nav">
                   <ul>
-                      <li><a href>history</a></li>
+                      <li><a href="">history</a></li>
                       <li><a href="#characters">characters</a></li>
                       <li><a href class="download">download</a></li>
                   </ul>
@@ -25,21 +25,18 @@
           </header>
 
           <!-- Hero section -->
+          <section class="this-is">
+            <h2>This is...</h2>
+        </section>
           <section class="hero">
-            <section class="this-is">
-                <h2>This is...</h2>
-            </section>
-                <h3>
                   <span class="first">Fraunces</span>
                   <span class="second">Fraunces</span>
                   <span class="third">Fraunces</span>
-                </h3>
-                <h3>
                   <span class="first1">Fraunces</span>
                   <span class="second2">Fraunces</span>
                   <span class="third3">Fraunces</span>
-                </h3>
-          </section>
+                  <span class="symbols">! @ # $ % ^ & * ( ) { } [ ] : ; ?</span>
+            </section>
 
           <!-- Type history -->
 <section class="page-wrapper">
@@ -57,28 +54,28 @@
             <p><span class="optical-size">optical size</span></p>
           </section>
 
-          <section id="characters">
-            <div id="text-wrapper">
+          <section class="characters">
               <section class="characters-title">
             <h1>Full Character Set</h1>
               </section>
             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ
               <div>abcdefghijklmnopqrstuvwxyz</div>
               0123456789</p>
-            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ
-              abcdefghijklmnopqrstuvwxyz
-              0123456789</p>
-            <p>h m n s</p>
-            <p>b d f h k l</p>
+            <p class="italic">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+              <div class="italic">abcdefghijklmnopqrstuvwxyz</div>
+              <p class="italic">0123456789</p>
+            <p class="wonkers">h m n s</p>
+            <p class="wonkers2">b d f h k l</p>
             <p>! @ # $ % ^ & * ( ) { } [ ] : ; ?</p>
             </div>
+          <button class="download-button">
+            <a ref>download</a>
+          </button>
+        </section>
           </section>
 
-          </div>
-          </section>
-
-          <!-- Start of the footer -->
-          <footer>
+          <!-- Footer -->
+          <footer class="footer">
             <h4>Fraunces</h4>
             <h5><div>Marissa Nocon • marissa.nocon@gmail.com</div>
             <div>University of Massachusetts Dartmouth • CVPA</div>
