--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
           <nav class="page-nav">
                   <ul>
-                      <li><a href="">history</a></li>
-                      <li><a href="#characters">characters</a></li>
-                      <li><a href class="download">download</a></li>
+                      <li><a href="#history">history</a></li>
+                      <li><a href="#characters-title">characters</a></li>
+                      <li><a href="#download-button">download</a></li>
                   </ul>
               </nav>
               <label for="nav-checkbox" class="nav-checkbox-icon">
@@ -40,7 +40,7 @@
 
           <!-- Type history -->
 <section class="page-wrapper">
-          <section class="history">
+          <section id="history">
             <section class="history-title">
             <h1>History</h1></section>
                 <p>Fraunces is a typeface published in 2020 by Phaedra Charles and Flavia Zimbardi with the help of Ethan Cohen and Andy Clymer at Undercase Type. The challenge of creating a display typeface was given to them by Google Fonts in 2018. It is often referred to as an “Old Style” typeface since the inspiration comes from the late nineteenth and early twentieth centuries, specifically during the Arts and Crafts experimentations. This is when many “wonky” fonts came into play that brought some personality to modernity without making historical authenticity the main focus. Other typefaces such as Cooper Black, Windsor, and Souvenir act as strong influences in the creation of Fraunces along with Golden Type of 1890.</p>
@@ -55,7 +55,7 @@
           </section>
 
           <section class="characters">
-              <section class="characters-title">
+              <section id="characters-title">
             <h1>Full Character Set</h1>
               </section>
             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ
@@ -68,10 +68,10 @@
             <p class="wonkers2">b d f h k l</p>
             <p>! @ # $ % ^ & * ( ) { } [ ] : ; ?</p>
             </div>
-          <button class="download-button">
+          <button id="download-button">
             <a ref>download</a>
           </button>
-        </section>
+          </section>
           </section>
 
           <!-- Footer -->
