created download link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
             <p>! @ # $ % ^ & * ( ) { } [ ] : ; ?</p>
             </div>
           <button id="download-button">
-            <a ref>download</a>
+            <a href="https://fraunces.undercase.xyz/">
+              <h3>download</h3>
+
+              </a>
           </button>
           </section>
           </section>
